# Maemo.Yandex.Fotki

./: .cproject  .project  COPYING  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  template.service.xml  template.service.xml.in  yandex-fotki.service.xml  yandex-fotki.service.xml.in  yandexfotki.service.xml  yandexfotki.service.xml.in
debian/: changelog  control  copyright  rules  sharing-service-template.prerm  yandex-fotki-sharing-plugin.install
src/: CP_RSA.cpp  Makefile  Makefile.am  Makefile.in  base64.cpp  common.cc  common.h  plugin.c  send.c  send.h  validate.c  validate.h
src/.deps/: libtemplate_la-CP_RSA.Plo  libtemplate_la-base64.Plo  libtemplate_la-common.Plo  libtemplate_la-plugin.Plo  libtemplate_la-send.Plo  libtemplate_la-validate.Plo  libyandexfotki_la-CP_RSA.Plo  libyandexfotki_la-base64.Plo  libyandexfotki_la-common.Plo  libyandexfotki_la-plugin.Plo  libyandexfotki_la-send.Plo  libyandexfotki_la-validate.Plo
src/libsharing/: sharing-account.h  sharing-entry-media.h  sharing-entry.h  sharing-http.h  sharing-plugin-interface.h  sharing-service-option.h  sharing-service.h  sharing-tag.h  sharing-transfer.h
