#
# This file is part of yandex-fotki-sharing-plugin
#
# Copyright (C) 2008-2009 Nokia Corporation. All rights reserved.
#
# This maemo code example is licensed under a MIT-style license,
# that can be found in the file called "COPYING" in the root
# directory.
#

SUBDIRS = src data

MAINTAINERCLEANFILES = aclocal.m4 compile config.h.in 	\
	config.guess config.sub configure		\
	depcomp install-sh ltmain.sh missing		\
	Makefile.in
