#
# This file is part of yandex-fotki-plugin-template
#
# Copyright (C) 2008-2009 Nokia Corporation. All rights reserved.
#
# This maemo code example is licensed under a MIT-style license,
# that can be found in the file called "COPYING" in the root
# directory.
#

services_DATA = yandexfotki.service.xml yandexfotki-post.png yandexfotki-setup.png

EXTRA_DIST = $(services)

MAINTAINERCLEANFILES = Makefile.in

